--- a/theme.less
+++ b/theme.less
@@ -1,3 +1,6 @@
+/* Color themes defined here.
+   Choose theme at the end of this file. */
+
 
 // Saturated theme
 
@@ -11,7 +14,8 @@
     @footertopbordercolor: hsla(100%, 100%, 100%, .5);
     @contentheadertext: #fff;
     @contenttext: #fff;
-    @sidebar: @headerbackground;
+    @sidebarbackground: #fac5c5;
+    
 
     @nav-list-item1: #fac5c5, #ff6a6a, #ff3434;
     @nav-list-item2: #a0dda0, #55db55, #00b900;
@@ -22,18 +26,18 @@
     
 // Accented gray theme
 
-.accentedgray {
-    @headerbackground: #aaa;
+.grayaccented {
+    @headerbackground: #999;
     @headeraccent: #f0f;
-    
+
     @footerbackground: #fff;
     @footertext: #777;
     @contentbackground:  hsla(0, 100%, 50%, 0);
     @footertopbordercolor: hsla(0, 0, 0, .2);
     @contenttext: #777;
     @contentheadertext: #666;
-    @sidebar: #fff;
-    
+    @sidebarbackground: #bbb;
+
     @nav-list-item-a: #bbb, #aaa, #999; 
     @nav-list-item-b: #aaa, #999, #777;
 
@@ -44,6 +48,28 @@
     @nav-list-item5: @nav-list-item-a;
 }
 
+.grayaccentedmore {
+    @headerbackground: #999;
+    @headeraccent: #f0f;
+
+    @footerbackground: #fff;
+    @footertext: #777;
+    @contentbackground:  hsla(0, 100%, 50%, 0);
+    @footertopbordercolor: hsla(0, 0, 0, .2);
+    @contenttext: #777;
+    @contentheadertext: #666;
+    @sidebarbackground: #bbb;
+
+    @nav-list-item-a: #bbb, #aaa, #999; 
+    @nav-list-item-b: #aaa, #999, #777;
+
+    @nav-list-item1: #fac5c5, #ff6a6a, #ff3434;
+    @nav-list-item2: #a0dda0, #55db55, #00b900;
+    @nav-list-item3: #7ab3e4, #2d8de0, #0065bc;
+    @nav-list-item4: #81c8b5, #43cca7, #00986f;
+    @nav-list-item5: #cb9de0, #c478e6, #a932de;
+}
+
 // Choose theme
 
-.accentedgray();
+.grayaccentedmore();
